--- a/sapui5routing/webapp/view/NotFound.view.xml
+++ b/sapui5routing/webapp/view/NotFound.view.xml
@@ -2,8 +2,10 @@
    controllerName="sap.ui.demo.nav.controller.NotFound"
    xmlns="sap.m"
    xmlns:mvc="sap.ui.core.mvc">
-   <MessagePage
+   <MessagePage class="sapUiResponsiveContentPadding"
       title="{i18n>NotFound}"
       text="{i18n>NotFound.text}"
-      description="{i18n>NotFound.description}"/>
+      description="{i18n>NotFound.description}"
+      showNavButton="true"
+		navButtonPress="onNavBack"/>
 </mvc:View>
